Refatorando página Home

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Barbearia Alura</title>
+    <link rel="sylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="titulo-principal">Barbearia Alura</h1>
+        <header>
+            <div class="caixa">
+                <h1><img src="logo.png"></h1>
+    
+                <nav class="menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.hmtl">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
     </header>
     <div class="principal">
         <img id="banner" src="banner.jpg">
@@ -30,7 +43,7 @@
     <div class="beneficios">
         <h3 class="titulo-centralizado">Benefícios</h3>
 
-        <ul>
+        <ul class="beneficios-lista">
             <li class="itens">Atendimento aos Clientes</li>
             <li class="itens">Espaço diferenciado</li>
             <li class="itens">Localização</li>
