--- a/produtos.html
+++ b/produtos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF=8">
     <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="sytle.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.hmtl">Contato</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
