--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="logo.png"></h1>
+            <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
 
             <nav>
                 <ul>
@@ -27,20 +27,20 @@
         <form>
 
             <label for="nomesobrenome">Nome e Sobrenome</label>
-            <input type="text" id="nomesobrenome" class="input-padrao">
+            <input type="text" id="nomesobrenome" class="input-padrao" required>
 
             <label for="email">Email</label>
-            <input type="text" id="email" class="input-padrao">
+            <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
             <label for="telefone">Telefone</label>
-            <input type="text" id="telefone" class="input-padrao">
+            <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
             <label for="mensagem">Mensagem</label>
-            <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+            <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
 
 
-            <div>
-                <p>Como prefere o nosso contato?</p>
+            <fieldset>
+                <legend>Como prefere o nosso contato?</legend>
                 <label for="radio-email">
                     <input type="radio" name="contato" id="radio-email">Email
                 </label>
@@ -50,30 +50,30 @@
                 </label>
 
                 <label for="radio-whatsapp">
-                    <input type="radio" name="contato" id="radio-whatsapp">WhatsApp
+                    <input type="radio" name="contato" id="radio-whatsapp" checked>WhatsApp
                 </label>
-            </div>
+            </fieldset>
 
-            <div>
-                <p>Qual horário prefere ser atendido?</p>
+            <fieldset>
+                <legend>Qual horário prefere ser atendido?</legend>
                 <select>
                     <option>Manhã</option>
                     <option>Tarde</option>
                     <option>Noite</option>
                 </select>
-            </div>
+            </fieldset>
 
             <label class="checkbox">
-                <input type="checkbox">Gostaria de receber nossas novidades por email?
+                <input type="checkbox" checked>Gostaria de receber nossas novidades por email?
             </label>
 
-            <input type="submit" value="Enviar Formulário">
+            <input type="submit" value="Enviar Formulário" class="enviar">
 
         </form>
     </main>
 
     <footer>
-        <img src="logo-branco.png">
+        <img src="logo-branco.png" alt="Logo da Barbearia Alura">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
     </footer>
 </body>
