--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
     
                 <nav class="menu">
                     <ul>
