Criando e estilizando uma tabela

--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,6 @@
 
     <main>
         <form>
-
             <label for="nomesobrenome">Nome e Sobrenome</label>
             <input type="text" id="nomesobrenome" class="input-padrao" required>
 
@@ -37,7 +36,6 @@
 
             <label for="mensagem">Mensagem</label>
             <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
-
 
             <fieldset>
                 <legend>Como prefere o nosso contato?</legend>
@@ -68,8 +66,31 @@
             </label>
 
             <input type="submit" value="Enviar Formulário" class="enviar">
-
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+            </tbody>
+        </table>
+
     </main>
 
     <footer>
