--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta charset="UTF=8">
     <title>Contato - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="sytle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -40,15 +40,15 @@
             <fieldset>
                 <legend>Como prefere o nosso contato?</legend>
                 <label for="radio-email">
-                    <input type="radio" name="contato" id="radio-email">Email
+                    <input type="radio" name="contato" id="radio-email" value="email">Email
                 </label>
 
                 <label for="radio-telefone">
-                    <input type="radio" name="contato" id="radio-telefone">Telefone
+                    <input type="radio" name="contato" id="radio-telefone" value="telefone">Telefone
                 </label>
 
                 <label for="radio-whatsapp">
-                    <input type="radio" name="contato" id="radio-whatsapp" checked>WhatsApp
+                    <input type="radio" name="contato" id="radio-whatsapp" value="whatsapp" checked>WhatsApp
                 </label>
             </fieldset>
 
