--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF=8">
+    <meta name="viewport" content="width=device-width">
     <title>Contato - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +25,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="formulario">
         <form>
             <label for="nomesobrenome">Nome e Sobrenome</label>
             <input type="text" id="nomesobrenome" class="input-padrao" required>
@@ -99,8 +101,4 @@
     </footer>
 </body>
 
-
 </html>
-
-<!-- qual a necessidade do value para tipo 'radio'? -->
-
